--- a/GitTest01/src/main/webapp/assets/css/Base_style.css
+++ b/GitTest01/src/main/webapp/assets/css/Base_style.css
@@ -7,16 +7,13 @@ body {
     min-height: 100vh;
 }
 
-
-/* 전체 공간설정, 동적  */
 .wrapper {
     flex: 1;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 150px auto;
     width: 100%;
 }
 
-/*네이게이션쪽 */
 header {
     display: flex;
     flex-direction: column;
@@ -25,7 +22,7 @@ header {
     padding: 10px 20px;
     border-bottom: 1px solid #ddd;
 }
-/* 로고 */
+
 .logo {
     margin-bottom: 0px;
 }
@@ -34,25 +31,82 @@ header {
     height: 140px;
 }
 
-/* 로고 바로 밑 선 */
 hr {
     width: 100%;
     border: none;
     border-top: 1px solid #ddd;
     margin: 10px 0;
 }
-/* 네비게이션 */
-nav {
-    margin: 5px;
+.breadcrumb-background {
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    background-color: #FAE372;
+    top: 300px;
+    left: 0;
+    z-index: 1;
+}
+.breadcrumb {
+    padding: 0px 15px;
+    background-color: #f8f9fa;
+    border-radius: 5px;
+    list-style: none;
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    margin: 0px;
+    z-index: 1;
+}
+
+.breadcrumb-item {
+    display: flex;
+    align-items: center;
+}
+
+.breadcrumb-item a {
+    text-decoration: none;
+    color: #007bff;
+    margin-right: 5px;
+}
+
+.breadcrumb-item span {
+    margin-right: 5px;
+    color: #6c757d;
+}
+
+.breadcrumb-item.active a {
+    pointer-events: none;
+    color: #6c757d;
+}
+
+.breadcrumb-background {
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    background-color: #FAE372;
+    top: 200px;
+    left: 0;
+    z-index: 0;
+}
+
+.main-nav {
     display: flex;
     justify-content: center;
     width: 100%;
 }
+
+/*네비게이션 */
+nav {
+    margin: 5px;
+    display: flex;
+    width: 70%;
+}
+
 nav ul li.dropdown {
     position: relative;
     display: inline-block;
-    
 }
+
 nav ul {
     list-style: none;
     display: flex;
@@ -62,18 +116,11 @@ nav ul {
     margin: 0;
 }
 
-  /* nav ul li a {
-    margin: 60px;
-    text-decoration: none;
-    color: #333;
-    font-size: 18px; /* nav 글자 크기 조정 */
-              
-
 nav ul li a {
     text-decoration: none;
     color: #333;
-    font-size: 18px; /* 글자 크기, 필요에 따라 조절 */
-    padding: 10px 60px; /* 메인 메뉴 항목의 패딩 조정 */
+    font-size: 18px;
+    padding: 10px 60px;
 }
 
 .user-options {
@@ -89,53 +136,35 @@ nav ul li a {
     height: 30px;
 }
 
-/* 네비게이션 아래 브레이크드럼 */
-.breadcrumb {
-    padding: 8px 15px; /* 내부 여백 설정 */
-    background-color: #f8f9fa; /* 배경 색상 */
-    border-radius: 5px; /* 모서리 둥글게 처리 */
-    list-style: none; /* 목록 앞의 기본 마커(숫자나 점) 제거 */
-    display: flex; /* 플렉스박스 모델 적용 */
-    gap: 5px; /* 아이템 사이의 간격 */
-}
-
-.breadcrumb-item a {
-    text-decoration: none; /* 링크 밑줄 제거 */
-    color: #007bff; /* 링크 색상 */
-}
-
-.breadcrumb-item + .breadcrumb-item::before {
-    content: ">"; /* 각 항목 사이에 '>' 기호 삽입 */
-    padding: 0 5px; /* '>' 기호 주변 여백 */
-    color: #6c757d; /* '>' 기호 색상 */
-}
-
-.breadcrumb-item.active {
-    color: #6c757d; /* 활성 항목 색상 변경 */
-    pointer-events: none; /* 활성 항목에 대한 마우스 이벤트 비활성화 (클릭 불가능) */
-}
-
-.breadcrumb-item {
-  /*  margin-right: 1000px; /* 오른쪽에 마진 추가 */
-  /*  padding: 5px 10px; /* 패딩 조정 */
-  display: flex;
-  align-items: center;
-}
-
-
-
 .dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: inherit; /* 너비 조정, 필요에 따라 조절하세요 */
+    min-width: inherit;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-    left: 30px;  /* 드롭다운 메뉴의 시작 위치를 정확하게 조정 */
-    top: 100%;  /* 부모 요소 바로 아래에 위치 */
-    white-space: nowrap; /* 텍스트가 한 줄에 나타나도록 설정 */
+    left: 30px;
+    top: 120%;
+    white-space: nowrap;
+    border-radius: 5px;
 }
 
+/* 드롭다운 콘텐츠별 개별 오프셋 적용 */
+.products-tab .dropdown-content {
+    left: 45px; /* 제품 드롭다운 오프셋 설정 */
+}
+
+.facilities-tab .dropdown-content {
+    left: 30px; /* 시설 드롭다운 오프셋 설정 */
+}
+
+.health-tab .dropdown-content {
+    left: 60px; /* 맞춤형 정보 드롭다운 오프셋 설정 */
+}
+
+.community-tab .dropdown-content {
+    left: 40px; /* 커뮤니티 드롭다운 오프셋 설정 */
+}
 
 .dropdown-content .moveable {
     position: relative;
@@ -144,40 +173,192 @@ nav ul li a {
 
 .dropdown-content a {
     color: black;
-    padding: 8px 12px; /* 패딩 조정 */
+    padding: 8px 12px;
     text-decoration: none;
     display: block;
     text-align: center; /* 텍스트 중앙 정렬 */
 }
 
-/* .dropdown-content a:hover {
-    background-color: #f1f1f1;
-} */
-
 .dropdown:hover .dropdown-content {
     display: block;
 }
-/* 건강관리 탭에만 오프셋 적용 */
-nav ul li.dropdown.health-tab .dropdown-content {
-    left: 60px; /* 원하는 오프셋 값으로 설정 */
-}
 
-
-/* wrapper 아래 메인 콘텐츠 & 푸터를 중앙에 배치 */
 main {
     flex: 1;
 }
 
+.content {
+    padding: 20px;
+}
 
-/* 상품 */
+.product-detail-section {
+    margin: 20px 0;
+}
 
-/* 배너 */
+.product-detail-container {
+    display: ruby-text;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 20px;
+    background-color: #fff;
+    border-bottom: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+.product-detail .discount {
+    color: #f00;
+}
+
+.product-detail .discount .original-price {
+    color: black;
+}
+
+.product-image {
+    flex: 1;
+    text-align: center;
+}
+
+.product-image img {
+    max-width: 100%;
+    height: auto;
+}
+
+.product-info {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.product-info h1 {
+    font-size: 2em;
+    margin: 10px 0;
+}
+
+.product-info .price {
+    font-size: 1.5em;
+    color: #f00;
+    margin: 10px 0;
+}
+
+.product-info button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.product-detail button {
+    padding: 10px 130px;
+    background-color: #007bff;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.product-description, .additional-info {
+    margin: 20px 0;
+    padding: 20px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+.product-content {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+}
+
+.product-content img {
+    width: 200px;
+    height: auto;
+}
+
+.product-info {
+    display: flex;
+    flex-direction: column;
+}
+
+.product-info h1 {
+    margin: 0;
+}
+
+.product-info p {
+    margin: 5px 0;
+}
+
+.product-info .price {
+    font-size: 1.5em;
+    color: #f00;
+    margin: 10px 0;
+}
+
+.product-info button {
+    padding: 10px 20px;
+    background-color: #f90;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1em;
+}
+
+.quantity-container {
+    display: ruby-text;
+    align-items: center;
+    /* gap: 10px; */
+    /* padding: 10px; */
+    background-color: #f8f8f8;
+    border-radius: 5px;
+    /* border: 1px solid #ddd; */
+}
+
+.quantity-container label {
+    display: none;
+}
+
+.quantity-container button {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
+}
+
+.quantity-container input {
+    width: 40px;
+    text-align: center;
+    border: none;
+    font-size: 16px;
+    background-color: transparent;
+    outline: none;
+}
+
+.total-price {
+    margin-left: auto;
+    font-size: 16px;
+    color: #333;
+}
+
+
+
+
 .banner img {
     width: 100%;
     height: auto;
     margin-bottom: 10px;
 }
-/* 하단 */
+
 .footer-wrapper {
     background-color: #333;
     color: #fff;
@@ -191,7 +372,7 @@ main {
     text-align: left;
     padding: 0px;
 }
-/* 하단_상단 */
+
 .footer-top-bar {
     display: flex;
     justify-content: space-between;
@@ -200,7 +381,6 @@ main {
 
 .footer-top-bar .footer-lang {
     float: left;
-    
 }
 
 .footer-top-bar .footer-top {
@@ -233,7 +413,6 @@ main {
     color: #fff;
 }
 
-/* 하단_중단 */
 .footer-contact {
     text-align: left;
     font-size: 10px;
@@ -248,7 +427,6 @@ main {
     text-decoration: none;
 }
 
-/* 하단_하단 */
 .footer-bottom {
     text-align: center;
 }
@@ -258,7 +436,6 @@ main {
     font-size: 8px;
 }
 
-/* 하단_맨 위로 아이콘1 */
 .back-to-top {
     text-align: center;
     margin-top: 0px;
@@ -269,7 +446,6 @@ main {
     text-decoration: none;
 }
 
-/* 하단_맨 위로 아이콘2 */
 .back-to-top img {
     width: 50px;
     height: 50px;
@@ -278,5 +454,3 @@ main {
     bottom: 20px;
     cursor: pointer;
 }
-/* /////////////////베이스 공통 틀/////////////////////////// */
-
