--- a/GitTest01/src/main/webapp/assets/css/DiseasePrediction.css
+++ b/GitTest01/src/main/webapp/assets/css/DiseasePrediction.css
@@ -1,11 +1,6 @@
 
 /* 전체 공간설정, 동적  */
-.wrapper {
-    flex: 1;
-    max-width: 1200px;
-    margin: 0 auto;
-    width: 100%;
-}
+
 
 /* 메인 컨테이너 */
 .main-container {
@@ -30,19 +25,13 @@
 }
 
 
-.main-nav {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    z-index: 1;
-  
-}
+
 
 /*네비게이션 */
 nav {
     margin: 5px;
     display: flex;
-    width: 70%;
+    width: auto;
 }
 
 nav ul li.dropdown {
@@ -70,7 +59,8 @@ nav ul li a {
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    border: 1px solid #ddd;
+    
+    border-bottom: 1px solid #ddd;
     border-radius: 5px;
 }
 
@@ -93,14 +83,27 @@ nav ul li a {
 
 
 .info-box small .info-text h1{
-	font-size: 21px;
+	font-size: 30px;
 }
+
 header {
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #fff;
-    padding: 0 0;
+    padding: 10px 20px;
     border-bottom: 1px solid #ddd;
     max-height: 252px;
+}
+.breadcrumb {
+    padding: 0px 15px;
+    background-color: #f8f9fa;
+    border-radius: 5px;
+    list-style: none;
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    margin: 0px;
+    margin-left: -650px;
+    z-index: 1;
 }
