--- a/GitTest01/src/main/webapp/assets/css/Mypage.css
+++ b/GitTest01/src/main/webapp/assets/css/Mypage.css
@@ -1,11 +1,5 @@
 
 
-/* 메인 컨테이너 */
-.main-container {
-    display: flex;
-    width: 100%;
-    height: calc(100vh - 200px); /* 헤더와 푸터를 제외한 높이 */
-}
 
 /* 왼쪽 컨텐츠 (개인정보) */
 .left-content {
@@ -13,6 +7,7 @@
     padding: 20px;
     overflow-y: auto;
     border: 1px solid #ddd;
+   
 }
 
 .login-section {
@@ -103,6 +98,7 @@
 .right-content {
     flex: 1;
     overflow-y: auto;
+    display: inline-block;
    
 
 }
@@ -121,6 +117,17 @@
     width: 100%;
     height: 100%;
     border: none;
+}
+.register-button {
+    background-color: #f4a900;
+    color: #fff;
+    border: none;
+    padding: 15px;
+    border-radius: 5px;
+    font-size: 20px;
+    width: calc(100% - 40px);
+    margin: 0 auto;
+    margin-top: 20px;
 }
 /* 
 header, footer {
