--- a/GitTest01/src/main/webapp/assets/css/login.css
+++ b/GitTest01/src/main/webapp/assets/css/login.css
@@ -1,4 +1,5 @@
-@charset "EUC-KR";
+
+
 
 .login-container {
     text-align: center;
@@ -9,21 +10,26 @@
     border-radius: 3%;
     align-items: center;
     max-width: 500px;
+    font-size: 15px;
 }
 
-.input-field {   /*·Î±×ÀÎ ¾ÆÀÌµğ ºñ¹Ğ¹øÈ£ ÀÔ·Â */
-    width: 97%;
+.input-field {   /*ë¡œê·¸ì¸ ì•„ì´ë”” ë¹„ë°€ë²ˆí˜¸ ì…ë ¥ */
+    width: 85%;
     padding: 15px;
     margin: 10px 0;
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
-    display: flex; 
+    display: flex;
+    margin-right: auto;
+    margin-left: auto; 
   
+    
+    
 
 }
 .login-button {
-    width: 100%;;
+    width: 90%;
     padding: 10px;
     background-color: #f8b400;
     border: none;
@@ -39,6 +45,7 @@
 .link-container {
     margin-top: 20px;
     font-size: 14px;
+
 }
 .link-container a {
     margin: 0 10px;
@@ -49,7 +56,7 @@
 .link-container a:hover {
     text-decoration: underline;
 }
-.login-container span {  /*spanÅÂ±×¾È BE PETMILY ±ÛÀÚ »ö*/
+.login-container span {  /*spaníƒœê·¸ì•ˆ BE PETMILY ê¸€ì ìƒ‰*/
     color: #f4a900;
 }
 
