--- a/GitTest01/src/main/webapp/assets/css/DiseasePrediction.css
+++ b/GitTest01/src/main/webapp/assets/css/DiseasePrediction.css
@@ -14,7 +14,9 @@
     flex: 1;
     padding: 20px;
     overflow-y: auto;
-    border-right: 1px solid #ddd;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    
 }
 
 /* 오른쪽 컨텐츠 (HealthCare.html) */
@@ -22,6 +24,10 @@
     flex: 1;
     padding: 20px;
     overflow-y: auto;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    
+    
 }
 
 
@@ -59,7 +65,6 @@ nav ul li a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
     border-bottom: 1px solid #ddd;
     border-radius: 5px;
 }
@@ -74,6 +79,10 @@ nav ul li a {
 
 .info-box small .info-text h1 {
     font-size: 30px;
+}
+
+.info-box.large2 {
+	border-bottom: none;
 }
 
 /* HealthCare.html을 포함하는 iframe 스타일 */
@@ -125,8 +134,10 @@ header {
     padding: 20px;
     overflow-y: auto;
     border-right: 1px solid #ddd;
+    border-radius: 5px;
+    overflow-x: hidden;
+    
 }
 
 .right-content {
-    border-right: none;
 }
