--- a/GitTest01/src/main/webapp/assets/css/DiseasePrediction2.css
+++ b/GitTest01/src/main/webapp/assets/css/DiseasePrediction2.css
@@ -14,7 +14,7 @@
     flex: 1;
     padding: 20px;
     overflow-y: auto;
-    border-right: 1px solid #ddd;
+    border: 1px solid #ddd;
 }
 
 /* 오른쪽 컨텐츠 (HealthCare.html) */
@@ -22,6 +22,8 @@
     flex: 1;
     padding: 20px;
     overflow-y: auto;
+    border: 1px solid #ddd;
+    
 }
 
 
@@ -59,7 +61,6 @@ nav ul li a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
     border-bottom: 1px solid #ddd;
     border-radius: 5px;
 }
