--- a/GitTest01/src/main/webapp/assets/css/map3.css
+++ b/GitTest01/src/main/webapp/assets/css/map3.css
@@ -13,7 +13,15 @@
     max-width: 600px;
     height: 400px;
 }
-
+.breadcrumb-background {
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    background-color: #FAE372;
+    top: 198px;
+    left: 0;
+    z-index: 0;
+}
 .location-list {
     width: 100%;
     max-width: 600px;
