[push]-정재호 - map리스트 글자 좌측정렬, 메인 로그인창 폰트 원복

--- a/GitTest01/src/main/webapp/assets/css/map3.css
+++ b/GitTest01/src/main/webapp/assets/css/map3.css
@@ -41,5 +41,5 @@
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 5px;
-    text-align: center; /* 항목 가운데 정렬 */
+    text-align: left;
 }
