--- a/GitTest01/src/main/webapp/assets/css/main.css
+++ b/GitTest01/src/main/webapp/assets/css/main.css
@@ -22,6 +22,7 @@
 .banner-text {
     text-align: center;
     margin-left: 20px;
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 20px;
     /* border: 2px solid lightgray; */
@@ -90,6 +91,7 @@
     font-size: 16px;
     text-align: center;
     margin-top: 0px;
+    font-family: Arial, serif;
     padding: 15px;
     text-decoration-line: none;
 }
